--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ markdown: kramdown
 # The title and tagline is showed on homepage
 #
 title :  Simpleyyt 
-tagline: Yitao's Blog
+tagline: Yangxs's Blog
 
 # Information about author
 #
@@ -20,15 +20,15 @@ author :
 # Information for contacts showed at on the footer
 #
 contact :
-  e-mail : mailto:simpleyyt@gmail.com
-  Github : https://github.com/Simpleyyt
-  WeiBo : http://www.weibo.com/u/1836017133
-  Google+ : https://plus.google.com/103860633659538888207?rel=author
+  e-mail : mailto:yangxs029t@gmail.com
+  Github : https://github.com/yangxs029
+  #WeiBo : http://www.weibo.com/u/1836017133
+  #Google+ : https://plus.google.com/103860633659538888207?rel=author
   
 # Links showed on the footer
 #
 links :
-  Yitao's Blog : http://simpleyyt.github.io/
+  Yangxs's Blog : http://yangxs029.github.io/
 
 # The search engine. Only support google custom search engine.
 #
